--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,9 @@
 
-lcopula v0.3  		2017-01-23, 2017-03-05
+lcopula v0.3  		2018-06-09
 ############################
 *New code for extremal attractors, now supported for non-integer valued cases
-Registration of native routines
+*Registration of native routines
+*Change of maintainer email address
 
 lcopula v0.206,  	2016-07-06
 ############################
@@ -10,6 +11,6 @@ lcopula v0.206,  	2016-07-06
 *Improved root finding in isliouvm and isliouvm_m
 *Improved documentation
 
-lcopula v0.205,  	2015-08-26
+lcopula v1,  		2015-08-26
 ############################
 Package ported to CRAN
